<resources>
    <string name="app_name">Mobeve</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="welcome">Welcome to\nMobeve</string>

    <!-- Login & Registration Activity -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Do not have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="login_failed">Login failed</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="action_settings">Action Setting</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already having an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>

    <!-- Create Event Activity -->
    <string name="create_event">Create Event</string>
    <string name="evn_name">Event Name</string>
    <string name="evn_start">Event Start Date</string>
    <string name="evn_end">Event End Date</string>
    <string name="evn_type">Event Type</string>
    <string name="evn_next">Next</string>

    <string name="bureau_suggestion">Bureau Suggestion</string>
    <string name="bur_name">Bureau Name</string>
    <string name="bur_start">Event Start Date</string>
    <string name="bur_end">Event End Date</string>
    <string name="bur_type">Event Type</string>
    <string name="bur_create_next">Next</string>

    <string name="manage_event">Manage Event</string>
    <string name="list_favourites">Favourite List</string>
    <string name="assigned_task">Assigned Tasks</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnMain">Main Menu</string>

    <!-- List Event Activity -->
    <string name="list_event">List Event</string>

    <!-- Detail Event Activity -->
    <string name="detail_event">Event Details</string>
    <string name="edet_id">Event ID</string>
    <string name="edet_name">Event Name</string>
    <string name="edet_start">Event Start Date</string>
    <string name="edet_end">Event End Date</string>
    <string name="edet_type">Event Type</string>
    <string name="edet_leader">Event Leader</string>
    <string name="edet_edit">Edit</string>
    <string name="edet_delete">Delete</string>

    <!-- Spinner elements for event types -->
    <string-array name="event_types">
        <item>Workshop</item>
        <item>Talk</item>
        <item>Sport</item>
        <item>Volunteerism</item>
    </string-array>

    <string-array name="participation_type">
        <item>Open</item>
        <item>Registered</item>
    </string-array>

    <string-array name="bool">
        <item>No</item>
        <item>Yes</item>
    </string-array>

    <string-array name="food">
        <item>No</item>
        <item>Catering</item>
        <item>Cook</item>
    </string-array>

    <string-array name="cert">
        <item>No certificate</item>
        <item>Printed</item>
        <item>Digital</item>
    </string-array>

    <string-array name="tuto_type">
        <item>No material</item>
        <item>Digital</item>
        <item>Handout</item>
        <item>Tools</item>
    </string-array>

    <string-array name="tutor">
        <item>Committee member</item>
        <item>Outsource</item>
    </string-array>

    <string-array name="ceremony">
        <item>No ceremony</item>
        <item>Formal</item>
        <item>Informal</item>
    </string-array>

    <!-- Second Level -->
    <string-array name="reg_type">
        <item>Free of charge</item>
        <item>Paid</item>
    </string-array>

    <string-array name="tutor_assist">
        <item>No</item>
        <item>Among committee</item>
        <item>Outsource</item>
    </string-array>

    <string-array name="formality">
        <item>Formal</item>
        <item>Informal</item>
    </string-array>

    <string-array name="score">
        <item>No</item>
        <item>Manual</item>
        <item>Digital</item>
    </string-array>

    <string-array name="medical">
        <item>No</item>
        <item>Basic medical</item>
        <item>Medical professional</item>
    </string-array>

    <string-array name="sleep">
        <item>No</item>
        <item>Tent</item>
        <item>Rental</item>
    </string-array>

</resources>