<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#304769"
android:gravity="center_vertical"
android:orientation="vertical"
android:padding="50dp"
tools:context="com.miesaf.mobeve.CreateEventActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/create_event"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/etCreateEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/evn_name"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etCreateStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/evn_start"
        android:inputType="datetime"
        android:padding="10dp" />


    <EditText
        android:id="@+id/etCreateEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/evn_end"
        android:inputType="datetime"
        android:padding="10dp" />

    <Spinner
        android:id="@+id/etCreateEventType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:drawable/btn_dropdown"
        android:hint="@string/evn_type"
        android:spinnerMode="dropdown"/>

    <Button
        android:id="@+id/btnEvnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#f05924"
        android:text="@string/evn_next"
        android:textColor="@android:color/white" />

</LinearLayout>