<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:background="@color/colorAppBg"
    tools:context=".DetailEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/detail_event"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titleId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edet_id"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/evnId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            tools:text = "dasfs" />

        <TextView
            android:id="@+id/titleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edet_name"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/evnName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            tools:text = "Makan Malam Sirih Pulang ke Gagang UiTM Cawangan Johor Kampus Segamat" />

        <TextView
            android:id="@+id/titleStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edet_start"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/evnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            tools:text="10 Oct 2019" />

        <TextView
            android:id="@+id/titleEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edet_start"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/evnEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            tools:text="10 Oct 2019" />

        <TextView
            android:id="@+id/titleType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edet_type"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/evnType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            tools:text="Workshops" />

        <TextView
            android:id="@+id/titleLeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edet_leader"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/evnLeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorText"
            tools:text="Muhamad Amirul Ikhmal bin Azman" />

        <Button
            android:id="@+id/btnEvnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorBtnEdit"
            android:text="@string/edet_edit"
            android:textColor="#304769" />

        <Button
            android:id="@+id/btnEvnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorBtnCancel"
            android:text="@string/edet_delete"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnEvnList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorButton"
            android:text="Back to Event List"
            android:textColor="@color/colorBtnText" />

    </LinearLayout>

</ScrollView>